--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "title": "Youtube Repeat",
   "name": "youtube-repeat",
   "version": "0.0.1",
-  "description": "Repeat functionality on any youtube song",
+  "description": "Repeat functionality on any youtube song. Just click repeat button and enioy :)",
   "main": "index.js",
   "author": "capJavert",
   "engines": {
@@ -10,7 +10,6 @@
   },
   "license": "MIT",
   "keywords": [
-    ""
-  ],
-  "preferences": [{}]
+    "Photos, Music & Videos", "Tabs"
+  ]
 }
