--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,9 @@ before_install:
 
 before_script:
   - npm install jpm -g
-  - npm install mozilla-download -g
-  - cd ..
-  - mozilla-download --branch mozilla-central -c prerelease firefox
-  - cd $TRAVIS_BUILD_DIR
 
 script:
-  - export JPM_FIREFOX_BINARY=$TRAVIS_BUILD_DIR/../firefox/firefox
   - jpm test -v
+
+addons:
+  firefox: "51.0"
